# compositional-token-algebra

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: data.py  download_corpus.sh  make_tickets.py
experiments/: _bootstrap.py  benchmark_qwen.py  benchmark_walltime.py  build_cache.py  diagnose.py  evaluate.py  gate.py  killer.py  plot.py  plot_gate.py  plot_qwen.py  plot_walltime.py  run_main.py  train_gate.py
experiments/gpu/: README.md  README_gate2.md  README_gate2_lse.md  cta_gate2_decode.ipynb  cta_gate2_lse.ipynb  cta_gpu_colab.ipynb  gate2_decode.py  gate2_lse.py  plot_gpu.py  roofline_cta.py  roofline_estimate.json  smoke_lse.py
paper/: cta.tex  habr_cta_preprint_ru.md
results/raw/: cache_code.pt  cache_tickets.pt  results_context_extension.json  results_frontier.json  results_gate.json  results_gate2_qwen3b_t4.json  results_gpu_qwen3b_t4.json  results_main.json  results_qwen_reversibility.json  results_qwen_walltime.json  results_walltime.json  results_walltime_len.json
src/cta/: __init__.py  algebra.py  detector.py  kv_lse.py  learned_gate.py  model.py
